edge/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: http_proxy
            route_config:
              name: local_route
              virtual_hosts:
              - name: envoy_backend_services
                domains: ["*"]
                routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: envoy_backend_services
            http_filters:
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: envoy_backend_services
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: envoy_backend_services
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-1
                      port_value: 5678
              - endpoint:
                  address:
                    socket_address:
                      address: service-2
                      port_value: 5678
